--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -1,11 +1,16 @@
 .cardContainer {
-  /* display */
+  display: flex;
   border: 1px solid #CAD0D2;
   border-radius: 4px;
   overflow: hidden;
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 3;
+  flex-basis: auto;
+
   /* display, flex-direction, flex-grow, flex-basis */
   border: 1px solid #CAD0D2;
   border-radius: 4px;
@@ -16,6 +21,12 @@
 }
 
 .cardDescription {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-end;
+  flex-grow: 3;
+
   /* display, flex-direction, align-items, flex-grow */
   padding: 15px 0;
 }
@@ -29,12 +40,26 @@ html {
 }
 
 .cardDescriptionIcon {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  flex-basis: auto;
+
   font-size: 32px;
   margin-bottom: 10px;
   color: #BCD2DA;
 }
 
 .cardDescriptionText {
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: flex-end;
+flex-grow: 3;
+flex-basis: auto;
+
   color: #57727C;
   font-size: 12px;
   text-align: center;
@@ -42,6 +67,14 @@ html {
 }
 
 .cardPrice {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  flex-grow: 3;
+  flex-basis: 100%;
+
+
   text-align: center;
   color: #57727C;
   font-size: 12px;
